# logify

./: .pre-commit-config.yaml  Dockerfile  LICENSE  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  docker-publish.yml
helm/logify/: Chart.yaml  values.yaml
helm/logify/dashboards/: logify.json
helm/logify/templates/: NOTES.txt  _helpers.tpl  dashboards.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/logify/templates/tests/: test-connection.yaml
logify/: db.py  main.py  types.py
