[tool.poetry]
name = "logify"
version = "0.1.0"
description = ""
authors = ["Mateusz Sabat <mateusz@sabat.biz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
immudb-py = "^1.4.0"
starlette-prometheus = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
